--- a/backups/CSS/header_footer.css
+++ b/backups/CSS/header_footer.css
@@ -1,115 +1,112 @@
-* {
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-/* Header navigation */
-#header-nav {
-  width: 100%;
-  height: 75px;
-  line-height: 75px; /* height between words in nav */
-  padding: 0px, 100px;
-  position: fixed;
-  background: #ccd5f8; /* #EDF1FF */
-  text-align: center;
-}
+  *{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+      Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+     margin: 0;
+     padding: 0;
+     box-sizing:border-box;
+  }
+  /* Header navigation */
+  nav {
+    width: 100%;
+    height: 75px;
+    line-height: 75px; /* height between words in nav */
+    padding: 0px 100px;
+    position:fixed;
+    background:  #D9ECFD  ;  /* header color backup #EDF1FF #ccd5f8; footer color backup 00093c 2d0b00  */
+    background: linear-gradient(to right, #78828a, #283b4e, #451100);
+    text-align: center;
+  }
 
-/* logo on the left */
-#header-nav .logo {
-  font-size: 30px;
-  font-weight: bold;
-  float: left;
-  color: #333;
-  text-transform: uppercase;
-  letter-spacing: 3px;
-  cursor: pointer; /* show cursor not the mouse */
-  justify-content: center;
-}
+  /* logo on the left */
+  nav .logo {
+    width: 80px;
+    height:auto;
+    font-weight:bold;
+    float: left;
+    color: #333;
+    text-transform: uppercase;
+    letter-spacing: 1px;
+    cursor: pointer; /* show cursor not the mouse */
+  }
+  
+  nav ul {
+    float: left;
+  }
+   /* display horizontally the nav */
+  nav li {
+    display: inline-block;
+    list-style: none; 
+    /* not showing dot of ul ol */
+  }
 
-#header-nav ul {
-  justify-content: center;
-}
-/* display horizontally the nav */
-#header-nav li {
-  display: inline;
-  list-style: none;
-  /* not showing dot of ul ol */
-}
+  nav li a {
+    font-size: 18px;
+    text-transform: uppercase;
+    padding: 30px 114px;
+    color:#333;
+    text-decoration: none;
+  }
+  /*decoration more transition of header */
+  nav li a:hover {
+    background-color: white;
+    color: #ff8c69;
+    transition: 0.8s ease-out;
+/* for the footer */
+  }
+  footer {
+    width: 100%;
+    position: absolute;
+    bottom: 0;
+    /* color change left to right of linear-gradient */
+    background: linear-gradient(to right, #78828a, #283b4e, #451100);
+    color: #fff;
+    padding: 20px 0 10px; 
+    border-top-left-radius: 150px; 
+    font-size: 13px;
+    line-height: 12px;
+  }
+  .row {
+    width: 95%; /* gap between each row including 3 rows*/
+    margin: auto;
+    display:flex;
+    flex-wrap:wrap;
+    align-items: flex-start;
+    justify-content: space-between;
+  }
+  /* divide the column equally */
+ .col {
+    flex-basis:25%;
+    padding: 10px;
+ }
+ /*team logo */
+ .logo {
+    width: 120px;
+    margin-bottom: 30px;
+ }
 
-#header-nav li a {
-  font-size: 18px;
-  text-transform: uppercase;
-  padding: 30px 114px;
-  color: #333;
-  text-decoration: none;
-}
-/*decoration more transition of header */
-#header-nav li a:hover {
-  background-color: white;
-  color: #ff8c69;
-  transition: 0.8s ease-out;
-  /* for the footer */
-}
-#general-footer {
-  width: 100%;
-  position: absolute;
-  bottom: 0;
-  /* color change left to right of linear-gradient */
-  background: linear-gradient(to right, #00093c, #2d0b00);
-  color: #fff;
-  padding: 20px 0 10px;
-  /* border-top-left-radius: 125px; */
-  font-size: 13px;
-  line-height: 12px;
-}
-.footer-row {
-  width: 95%; /* gap between each row including 3 rows*/
-  margin: auto;
-  display: flex;
-  flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: space-between;
-}
-/* divide the column equally */
-.footer-col {
-  flex-basis: 25%;
-  padding: 10px;
-}
-/*team logo */
-.logo {
-  width: 120px;
-  margin-bottom: 30px;
-}
-
-/* col 2 email phone */
-.footer-col h3 {
+ /* col 2 email phone */
+ .col h3 {
   width: fit-content;
   margin-bottom: 40px;
   position: relative;
-}
-.footer-email-id {
+ }
+ .email-id {
   width: fit-content;
   border-bottom: 1px solid #333;
   margin: 20px 0;
-}
+ }
 
-.footer-col ul li {
+ ul li {
   list-style: none;
   margin-bottom: 12px;
-}
+ }
 
-.footer-col ul li a {
+ul li a {
   text-decoration: none;
   color: #fff;
 }
-
-.footer-col a {
-  transition: 0.5 ease-in-out;
-}
 /* last column, no need submit button */
-.footer-col form {
+form {
   padding-bottom: 15px;
   display: flex;
   align-items: center;
@@ -117,7 +114,7 @@
   border-bottom: 1px solid #ccc;
   margin-bottom: 50px;
 }
-.footer-col form input {
+form input {
   width: 100%;
   background: transparent;
   color: #ccc;
@@ -125,9 +122,9 @@
   outline: none;
 }
 /* copy right the end */
-.footer-col hr {
-  width: 95%;
-  border: 0;
-  border-bottom: 1px solid #333;
-  margin: 10px auto;
-}
+ hr{
+   width: 95%;
+   border : 0;
+   border-bottom: 1px solid #333;
+   margin: 10px auto;
+ }
