--- a/styles/style.css
+++ b/styles/style.css
@@ -38,6 +38,7 @@ description: This file is the main file of whole css!
   width: 100%;
   height: 100%;
   z-index: -1;
+  /* Image Source: https://4kwallpapers.com/abstract/windows-11-gradient-background-bloom-light-backgrounds-5k-8411.html */
   background-image: url("../images/ha.png");
   background-size: cover;
   background-position: center;
@@ -902,6 +903,11 @@ https://www.sitepoint.com/css-typewriter-effect/ */
 /**************************** End of Enhancement 1 ***********************/
 
 /**************************** Start of Enhancement 2 ***********************/
+
+/* Adapted from  https://stackdiary.com/gradient-hover-effect-css/
+https://www.w3schools.com/cssref/sel_hover.php
+https://www.youtube.com/watch?v=H_64n7gY3h0
+*/
 
 .about-card:hover {
   transform: scale(1.2);
